testdata/invalid/invalid_map_keys_3.bop
struct Wrong {
    map[string, map[no]] fred;
}